[package]
name = "day9"
version = "0.1.0"
authors = ["Roger Lipscombe <roger@differentpla.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"]}
env_logger = "*"